Allow to build on Java 17